--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,8 +1,8 @@
-baseURL = "http://example.org/" # The URL of your site.
-title = "Hugo Zzo Theme" # Title of your site
+baseURL = "https://zshuaibin.github.io/" # The URL of your site.
+title = "Zires's homesite" # Title of your site
 theme = "zzo" # Name of Zzo theme folder in `themes/`.
 
-defaultContentLanguage = "en" # Default language to use (if you setup multilingual)
+defaultContentLanguage = "zh" # Default language to use (if you setup multilingual)
 defaultContentLanguageInSubdir = true # baseURL/en/, baseURL/kr/ ...
 hasCJKLanguage = true # Set `true` for Chinese/Japanese/Korean languages.
 
