--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/zzo"]
 	path = themes/zzo
 	url = https://github.com/zzossig/hugo-theme-zzo.git
+[submodule "obsidian"]
+	path = obsidian
+	url = git@github.com:zires/obsidian.git
