--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -1,12 +1,5 @@
-[en]
-  title = "Zzossig's Blog"
-  languageName = "English"
-  weight = 2
-  languagedir = "ltr"
-  contentdir = "content/en"
-
 [zh]
-  title = "I like for you to be still."
+  title = "zshuaibin"
   languageName = "Chinese"
   weight = 2
   languagedir = "ltr"
