--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -52,9 +52,11 @@ myname = "zshuaibin"
 # email = "zshuaibin@gmail.com"
 whoami = "程序员/全栈/项目管理/技术管理"
 bioImageUrl = "https://nextcloud-1255384104.cos.ap-shanghai.myqcloud.com/avatar.png" # image url like "http//..." or "images/anyfoldername/mybioimage.jpg" If not set, we find a avatar image in root/static/images/whoami/avatar.(png|jpg|svg)
+authorImageUrl= "https://static-1255384104.cos.ap-shanghai.myqcloud.com/uPic/fAwvfH.jpg"
 useGravatar = false # we use this option highest priority
 location = "Shanghai, China"
-organization = "Aukudu"
+# organization = "Aukudu"
+organization = "RCC"
 link = "https://github.com/zires"
 
 # sidebar
