--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://zshuaibin.github.io/" # The URL of your site.
+baseURL = "https://zires.info/" # The URL of your site.
 title = "I like for you to be still | zshuaibin" # Title of your site
 theme = "zzo" # Name of Zzo theme folder in `themes/`.
 
